# hermes-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  hermes-docs-links.md  setup.sh
MCPDocSearch/: .gitignore  README.md  crawl.py  pyproject.toml
MCPDocSearch/crawler_cli/: __init__.py  config.py  crawler.py  main.py  markdown.py  utils.py
MCPDocSearch/mcp_server/: __init__.py  app.py  config.py  data_loader.py  main.py  mcp_tools.py  search.py
MCPDocSearch/storage/: hermes-agent.md
